plugins {
    id 'java'
    id 'org.springframework.boot' version '3.5.4'
    id 'io.spring.dependency-management' version '1.1.7'
}

group = 'com.metatron.workforce'
version = '0.1.0'

description = 'Metatron Workforce'

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(22)
    }
}

repositories {
    mavenCentral()
}

dependencies {
    implementation 'org.springframework.boot:spring-boot-starter'
    implementation 'org.springframework.boot:spring-boot-starter-web'
    implementation 'org.springframework.boot:spring-boot-starter-actuator'
    testImplementation 'org.springframework.boot:spring-boot-starter-test'
}

tasks.named('test') {
    useJUnitPlatform()
    // The canonical production host is resource constrained and builds while services stay online.
    // Keep the forked test JVM bounded so verification cannot starve the running institutional runtime.
    maxHeapSize = '192m'
    maxParallelForks = 1
    // Recycle the single full-suite worker before accumulated JDK HttpClient selector threads can
    // exceed the constrained production runner PID/thread envelope. No tests are skipped.
    forkEvery = 25
    jvmArgs '-XX:MaxMetaspaceSize=128m'
}

tasks.withType(JavaCompile).configureEach {
    options.fork = false
}

springBoot {
    mainClass = 'com.metatron.workforce.MetatronWorkforceApplication'
}
